syntax = "proto3";

package connector;

service LnctlConnector {
  rpc GetStatus(GetStatusRequest) returns (GetStatusResponse) {}
  rpc StreamUpdates(StreamUpdatesRequest) returns (stream UpdateEvent) {}
}

message GetStatusRequest {}
message GetStatusResponse {
  string connector_id = 1;
  string node_pubkey = 2;
  ConnectorType type = 3;
}
enum ConnectorType {
  LND = 0;
}

message StreamUpdatesRequest { }
message UpdateEvent { }
